--- a/requirements.txt
+++ b/requirements.txt
@@ -107,3 +107,16 @@ yamllint==1.24.2
 yamlordereddictloader==0.4.0
 yarl==1.6.0
 zipp==3.2.0
+Brotli==1.0.9
+dash==1.16.2
+dash-core-components==1.12.1
+dash-html-components==1.1.1
+dash-renderer==1.8.2
+dash-table==4.10.1
+easysnmp==0.2.5
+Flask-Compress==1.5.0
+numpy==1.19.2
+pandas==1.1.2
+python-dateutil==2.8.1
+pytz==2020.1
+retrying==1.3.3
